--- a/gradevo-agency-V1/frontend/package.json
+++ b/gradevo-agency-V1/frontend/package.json
@@ -10,7 +10,7 @@
         "test": "vitest"
     },
     "engines": {
-        "node": "18.x"
+        "node": ">=20.x"
     },
     "dependencies": {
         "@react-three/drei": "^9.105.6",
