--- a/gradevo-agency-V1/backend/package.json
+++ b/gradevo-agency-V1/backend/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "bcryptjs": "^3.0.3",
+        "cloudinary": "^1.41.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
@@ -16,6 +17,7 @@
         "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "pg": "^8.11.5"
     },
     "devDependencies": {
