--- a/gradevo-agency-V1/.gitignore
+++ b/gradevo-agency-V1/.gitignore
@@ -3,7 +3,6 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
@@ -11,6 +10,15 @@ node_modules
 dist
 dist-ssr
 *.local
+
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+backend/.env
+frontend/.env
 
 # Editor directories and files
 .vscode/*
