Lock next-auth to 4.24.7 to resolve nodemailer conflict

--- a/Starto-V2/package.json
+++ b/Starto-V2/package.json
@@ -36,9 +36,9 @@
     "framer-motion": "^12.23.26",
     "lucide-react": "0.378.0",
     "next": "14.2.3",
-    "next-auth": "^4.24.7",
+    "next-auth": "4.24.7",
     "next-themes": "^0.3.0",
-    "nodemailer": "^6.9.13",
+    "nodemailer": "6.9.13",
     "openai": "^4.47.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
