--- a/Starto-V2/package.json
+++ b/Starto-V2/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start -p $PORT",
     "lint": "eslint"
   },
@@ -37,6 +38,7 @@
     "lucide-react": "0.378.0",
     "next": "^14.2.35",
     "next-auth": "4.24.7",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "nodemailer": "6.9.13",
     "openai": "^4.47.1",
